@@ -1,3 +1,7 @@
+Sun Apr 12 09:24:03 2015  Tanaka Akira  <akr@fsij.org>
+
+	* test/ruby/test_file_exhaustive.rb: Test a file not owned.
+
 Sun Apr 12 09:05:44 2015  Tanaka Akira  <akr@fsij.org>
 
 	* ext/fiddle/depend: Fix "Wrong mix of special targets" error with
